Added admin page to generate map coords for map "puzzle"

--- a/openday_scavenger/views/admin/static/index.html
+++ b/openday_scavenger/views/admin/static/index.html
@@ -4,5 +4,6 @@
 <div>
     <a href="/admin/puzzles">Puzzle Management</a>
     <a href="/admin/visitors">Visitor Management</a>
+    <a href="/admin/map">Map Management</a>
 </div>
 {% endblock %}
