--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -21,7 +21,7 @@
         <h2 id="question" >{{question}} </h2>
         <p id="hint" data-num="{{data['words']|length}}"> 🔍Let's start the words treasure hunting! Click on the letter in the right order to build a word. 😎</p>
         <p>😏When you are happy with the word, use the button below to add the each word you find into answer! 👇</p>
-        <div class="container" style="margin-top:20px;">
+        <div class="container" style="margin-top:20px;" id="puzzle">
             {% for i in range(data['puzzle']|length ) %}
             <div class="row">
                 {% for j in range(data['puzzle'][i]|length) %}
