style(ads matchup puzzle): change the layout for mobile friendly

--- a/openday_scavenger/puzzles/ads_question_answer_matchup/static/ads_question_answer_matchup.css
+++ b/openday_scavenger/puzzles/ads_question_answer_matchup/static/ads_question_answer_matchup.css
@@ -1,3 +1,51 @@
 body {
-    background-color: LightSteelBlue;
+  background-color: LightSteelBlue;
+}
+
+h1 {
+  text-align: center;
+}
+
+.guide-message {
+  padding: 0.5em;
+  font-size: 1.2em;
+  text-align: center;
+}
+
+#example4Right {
+  cursor: grab;
+}
+
+.last-col {
+  padding-right: 0;
+}
+
+.list-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 14vh;
+}
+
+#example4Left .list-row {
+  font-size: 1.2em;
+  @media (max-width: 768px) {
+    font-size: 1em;
+  }
+
+  @media (max-width: 450px) {
+    font-size: 0.9em;
+  }
+}
+
+#example4Right .list-row {
+  font-size: 1.4em;
+  font-weight: bold;
+}
+
+button {
+  margin-top: 0.8em !important;
+  font-size: 1.4em !important;
+  height: 8vh;
 }
