--- a/openday_scavenger/puzzles/ads_question_answer_matchup/static/ads_question_answer_matchup.css
+++ b/openday_scavenger/puzzles/ads_question_answer_matchup/static/ads_question_answer_matchup.css
@@ -13,6 +13,7 @@ h1 {
 }
 
 #example4Right {
+  position: relative;
   cursor: grab;
 }
 
@@ -48,4 +49,32 @@ button {
   margin-top: 0.8em !important;
   font-size: 1.4em !important;
   height: 8vh;
+}
+
+/* finger animation */
+.finger-container {
+  position: absolute;
+  top: 0;
+  left: 70%;
+  bottom: 0;
+  right: 0;
+  background-color: transparent;
+  animation: finger-drag 3s ease-in-out infinite;
+  z-index: 1;
+}
+.finger {
+  width: 30px;
+  top: 0;
+  left: 0;
+}
+@keyframes finger-drag {
+  0% {
+    transform: translateY(10%);
+  }
+  50% {
+    transform: translateY(calc(90% - 30px));
+  }
+  100% {
+    transform: translateY(10%);
+  }
 }
