--- a/openday_scavenger/puzzles/xray_filters/static/xray_filters.css
+++ b/openday_scavenger/puzzles/xray_filters/static/xray_filters.css
@@ -1,3 +1,111 @@
 body {
-    background-color: LightSteelBlue;
+    background-color: rgb(250, 252, 255);
+    display: flex;
+    flex-direction: column;
+}
+
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    max-width: 2000px;
+    height: auto;
+    box-sizing: border-box;
+}
+
+.table-and-beam {
+    display: block;
+    max-width: 80%;
+    max-height: 100%;
+    height: auto;
+
+}
+
+.filter-image {
+    position: absolute;
+    width: 3%;
+    height: auto;
+    transform: translate(-50%, -50%);
+}
+
+
+.filter1 {
+    top: 25%;
+    left: 38.5%;
+}
+.filter1-down {
+    top: 55%;
+    /* left: 38.5%; */
+}
+
+.filter2 {
+    top: 25%;
+    left: 47%;
+}
+.filter2-down {
+    top: 55%;
+    /* left: 47%; */
+}
+
+.filter3 {
+    top: 24.5%;
+    left: 55%;
+}
+.filter3-down {
+    top: 54.5%;
+    /* left: 55%; */
+}
+
+.filter4 {
+    top: 24%;
+    left: 63%;
+    width: 4%;
+}
+
+.filter4-down {
+    top: 54%;
+    /* left: 63%; */
+}
+
+.beam1, .beam2, .beam3, .beam4 {
+    position: absolute;
+    height: 8%;
+    top: 56.2%;
+    left: 14.6%;
+    transform-origin: left;
+    visibility: hidden;
+    opacity: 0;
+    filter: brightness(0.8) saturate(0.7);
+}
+
+.beam1 {
+    width: 23.8%;
+    transform: rotate(2.1deg);
+}
+.beam2 {
+    width: 32.6%;
+    transform: rotate(0.9deg);
+}
+.beam3 {
+    width: 40.5%;
+    transform: rotate(0.1deg);
+}
+.beam4 {
+    width: 48.1%;
+    transform: rotate(-0.1deg);
+}
+
+.dim-2 {
+    filter: brightness(0.7) saturate(0.6);
+}
+
+.dim-3 {
+    filter: brightness(0.6) saturate(0.6);
+}
+
+.dim-4 {
+    filter: brightness(0.5) saturate(0.6);
 }
