--- a/openday_scavenger/puzzles/xray_filters/static/xray_filters.css
+++ b/openday_scavenger/puzzles/xray_filters/static/xray_filters.css
@@ -1,19 +1,96 @@
 body {
-    background-color: rgb(250, 252, 255);
+    background-color: rgb(53, 156, 204);
     display: flex;
     flex-direction: column;
+    font-family: 'Arial', sans-serif;
+    font-size: 16px;
+    padding: 10px;
 }
 
+h1 {
+    font-size: 2rem;
+    text-align: center;
+    color: #3f3f3f;
+}
 
+h3 {
+    font-size: 2rem;
+    color: #3f3f3f;
+}
+
+p {
+    font-size: 1rem;
+    color: #383636;
+    text-align: center;
+}
+
+.checkbox-container {
+    width: 100%;
+    max-width: 400px;
+    text-align: left;
+}
+
+label {
+    font-size: 1rem;
+    color: #333;
+    display: block;
+    margin-bottom: 10px;
+}
+
+input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+button {
+    background-color: #1e69b9;
+    color: white;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 10px;
+}
+
+#output {
+    margin-top: 20px;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    button {
+        font-size: 0.9rem;
+        padding: 8px 16px;
+    }
+
+    .checkbox-container {
+        max-width: 95%;
+    }
+}
+
+/* -------------------- Image classes and their positioning ---------------------- */
 .image-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     position: relative;
     width: 100%;
     max-width: 2000px;
     height: auto;
     box-sizing: border-box;
+    margin: 0 auto;
+    background-color: rgb(250, 252, 255);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.699);
 }
 
 .table-and-beam {
@@ -38,7 +115,6 @@ body {
 }
 .filter1-down {
     top: 55%;
-    /* left: 38.5%; */
 }
 
 .filter2 {
@@ -47,7 +123,6 @@ body {
 }
 .filter2-down {
     top: 55%;
-    /* left: 47%; */
 }
 
 .filter3 {
@@ -56,7 +131,6 @@ body {
 }
 .filter3-down {
     top: 54.5%;
-    /* left: 55%; */
 }
 
 .filter4 {
@@ -67,7 +141,6 @@ body {
 
 .filter4-down {
     top: 54%;
-    /* left: 63%; */
 }
 
 .beam1, .beam2, .beam3, .beam4 {
