--- a/openday_scavenger/puzzles/xray_filters/static/xray_filters.css
+++ b/openday_scavenger/puzzles/xray_filters/static/xray_filters.css
@@ -1,19 +1,37 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: rgb(53, 156, 204);
+    background-color: rgb(167 193 204);
     display: flex;
     flex-direction: column;
     font-family: 'Arial', sans-serif;
     font-size: 16px;
+}
+
+.title-banner {
+    width: 100%;
+    background-color: #444649;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.title-banner h1 {
+    font-size: 2.5rem;
+    margin: 0;
+}
+
+.main-content {
+    margin: 0 8px;
     padding: 10px;
 }
 
-h1 {
-    font-size: 2rem;
-    text-align: center;
-    color: #3f3f3f;
-}
 
 h3 {
+    margin: 20px 0;
     font-size: 2rem;
     color: #3f3f3f;
 }
@@ -22,6 +40,7 @@ p {
     font-size: 1rem;
     color: #383636;
     text-align: center;
+    margin: 16px 0;
 }
 
 .checkbox-container {
@@ -42,13 +61,15 @@ input[type="checkbox"] {
 }
 
 button {
-    background-color: #1e69b9;
+    background-color: #444649;
     color: white;
     font-size: 1rem;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-top: 10px;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 #output {
@@ -69,6 +90,7 @@ button {
     button {
         font-size: 0.9rem;
         padding: 8px 16px;
+        width: 100%;
     }
 
     .checkbox-container {
@@ -84,7 +106,7 @@ button {
     flex-direction: column;
     position: relative;
     width: 100%;
-    max-width: 2000px;
+    max-width: 800px;
     height: auto;
     box-sizing: border-box;
     margin: 0 auto;
@@ -100,6 +122,16 @@ button {
     height: auto;
 
 }
+
+.arrow-left {
+    position: absolute;
+    width: 12%;
+    height: auto;
+    top: 53.2%;
+    left: 86.5%;
+    transform: rotate(-2deg);
+}
+
 
 .filter-image {
     position: absolute;
