--- a/openday_scavenger/puzzles/map/static/map.css
+++ b/openday_scavenger/puzzles/map/static/map.css
@@ -24,11 +24,11 @@ body {
 body {
     display: flex;
     flex-direction: column;
-    margin: 3rem 0;
+    margin: 1.5rem 0;
 }
 
 .title {
-    color: dodgerblue;
+    color: #0076c0;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 16px;
@@ -61,6 +61,11 @@ p.return {
 }
 
 a.link {
-    color: dodgerblue;
+    color: #0d6efd;
+    transition: color 80ms ease-in-out;
 }
 
+a.link:hover,
+a.link:focus {
+    color: midnightblue;
+}
