add interactive plotly graph to stats admin page

--- a/openday_scavenger/views/admin/static/index.html
+++ b/openday_scavenger/views/admin/static/index.html
@@ -27,5 +27,12 @@
             <small class="pb-2 mb-0">correct responses from visitors</small>
         </div>
     </div>
+    <div class="row"></div>
+        <div class="col my-4 mx-3 p-3 shadow-sm admin-stats-panel admin-bg-grey">
+            <div >
+                {{ fig | safe }}
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
