--- a/openday_scavenger/views/admin/static/layout.html
+++ b/openday_scavenger/views/admin/static/layout.html
@@ -9,6 +9,9 @@
         <link href="/static/css/solid.min.css" rel="stylesheet"/>
         <link href="/static/css/openday.css" rel="stylesheet"/>
 
+        <meta charset="utf-8" />   <!--It is necessary to use the UTF-8 encoding with plotly graphics to get e.g. negative signs to render correctly -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     
