--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
         <script src="/static/js/bootstrap.bundle.min.js"></script>
