--- a/openday_scavenger/views/admin/templates/visitors.html
+++ b/openday_scavenger/views/admin/templates/visitors.html
@@ -14,10 +14,11 @@
             </div>
         </div>
         <div class="col-8">
-            <div class="me-3 p-3 bg-body shadow-sm admin-panel-container">
-            test2
+            <div class="bg-body shadow-sm admin-panel-container" hx-trigger="input from:#uid_filter delay:500ms" hx-include="#uid_filter" hx-get='/admin/visitors/status'>
+                <div class="me-3 p-3">
+                    Please scan an Adventure Key or type the visitor UID into the search field.
+                </div>
             </div>
-
         </div>
 
     </div>
@@ -25,15 +26,15 @@
 
 <div class="my-4 mx-3 p-3 bg-body shadow-sm admin-panel-container">
     <h5 class="border-bottom pb-2 mb-0">Visitors</h5>
-    <form id='visitor-filter-form' class="mt-3" onsubmit="return false;" hx-encoding='multipart/form-data' hx-trigger="input from:#search-form, input from:[type='checkbox'], click from:#clearButton" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
+    <form id='visitor-filter-form' class="mt-3" onsubmit="return false;" hx-encoding='multipart/form-data' hx-trigger="input from:#uid_filter, input from:[type='checkbox'], click from:#clearButton" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
         <div class="mb-3">
             <label for="uid_filter" class="form-label">Filter by UID:</label>
             <div class="container-fluid px-0">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-10">
                         <input type="text" id="uid_filter" name="uid_filter" class="form-control" hx-trigger="keyup delay:500ms" hx-get='/admin/visitors/table' hx-swap="innerHTML" hx-target="#visitor-table">
                     </div>
-                    <div class="col-4">
+                    <div class="col-2">
                         <button class="btn btn-primary" id="clearButton" onclick="document.getElementById('uid_filter').value='';">
                             <i class="fa-solid fa-filter-circle-xmark"></i>
                             Clear
@@ -43,7 +44,7 @@
             </div>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" checked id="still_playing" name="still_playing">
+            <input class="form-check-input" type="checkbox" id="still_playing" name="still_playing" checked>
             <label class="form-check-label" for="still_playing">
                 Show only visitors still playing
             </label>
@@ -56,7 +57,9 @@
 <script>
     function onScanSuccess(decodedText, decodedResult) {
       const inputElement = document.getElementById("uid_filter");
-      inputElement.value=decodedText;
+      const url = new URL(decodedText);
+      const segments = url.pathname.split('/')
+      inputElement.value=segments[segments.length - 1];
       inputElement.dispatchEvent(new Event('keyup'));
     }
 
