--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
         <script src="/static/js/bootstrap.bundle.min.js"></script>
@@ -20,9 +21,9 @@
         <!-- <h1>Finder Puzzle</h1> -->
         <h1 id="question" > 🔍 Can you find the hidden treasure? </h1>
         <h2 id="question" >{{question}} </h2>
-        <h4 id="hint" data-num="{{data['words']|length}}"> Select letters in order to build a word. 😎</h4>
+        <h5 id="hint" data-num="{{data['words']|length}}"> Select letters in order to build a word. 😎</h5>
         <h5>😏 Use the button below to add words to your answer! 👇</h5>
-        <div class="container" style="margin-top:20px;">
+        <div class="container" style="margin-top:15px;">
             {% for i in range(data['puzzle']|length ) %}
             <div class="row">
                 {% for j in range(data['puzzle'][i]|length) %}
@@ -42,7 +43,7 @@
                 <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
                 <!-- <input hidden type="text" id="answer" name="answer" > -->
                 <button id="btn-add" class="btn btn-outline-primary rounded-pill mx-2" ><i class="fa-solid fa-plus"></i>  Add to answer</button>
-                <button id="btn-submit" class="btn btn-outline-primary rounded-pill mx-2"><i class="fa-solid fa-check"></i> Submit your answer</button>
+                <button id="btn-submit" class="btn btn-outline-primary rounded-pill mx-2"><i class="fa-solid fa-check"></i> Submit!</button>
                     
             </div>
         </div>
