Add back QR code download for all visitors in the pool

--- a/openday_scavenger/views/admin/templates/visitors_pool.html
+++ b/openday_scavenger/views/admin/templates/visitors_pool.html
@@ -19,6 +19,10 @@
         </button>
     </form>
     <div id="visitor-pool-table" hx-get="/admin/visitors/pool_table" hx-trigger="load" hx-swap="innerHTML"></div>
+    <a class="btn btn-primary" href="/admin/visitors/download-pdf">
+        <i class="fa-regular fa-qrcode"></i>
+        Download All QR Codes
+    </a>
 </div>
 
 
