--- a/openday_scavenger/views/admin/templates/visitors.html
+++ b/openday_scavenger/views/admin/templates/visitors.html
@@ -26,7 +26,7 @@
 
 <div class="my-4 mx-3 p-3 bg-body shadow-sm admin-panel-container">
     <h5 class="border-bottom pb-2 mb-0">Visitors</h5>
-    <form id='visitor-filter-form' class="mt-3" onsubmit="return false;" hx-encoding='multipart/form-data' hx-trigger="input from:#uid_filter keyup delay:500ms, input from:#still_playing, click from:#clearButton" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
+    <form id='visitor-filter-form' class="mt-3" onsubmit="return false;" hx-encoding='multipart/form-data' hx-trigger="input from:#uid_filter delay:500ms, input from:#still_playing, click from:#clearButton" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
         <div class="mb-3">
             <label for="uid_filter" class="form-label">Filter by UID:</label>
             <div class="container-fluid px-0">
