show any errors thrown by QR code scanner callbacks

--- a/openday_scavenger/views/admin/templates/visitors.html
+++ b/openday_scavenger/views/admin/templates/visitors.html
@@ -72,7 +72,9 @@
     }
 
     function onScanFailure(error) {
+        console.error("QR Code Scanning Failure: ", error);
     }
+
     document.addEventListener('DOMContentLoaded', function() {
         let html5QrcodeScanner = new Html5QrcodeScanner(
             "reader",
