--- a/openday_scavenger/views/admin/static/map.html
+++ b/openday_scavenger/views/admin/static/map.html
@@ -19,7 +19,7 @@
             puzzle on the Puzzles page.</p>
     </div>
 
-    <div id="map-editor" class="map-container">
+    <div id="map-editor" class="map-admin">
         <img src="/static/images/map/as_layout.svg" class="map-svg" />
     </div>
 
