--- a/openday_scavenger/puzzles/map/static/map.css
+++ b/openday_scavenger/puzzles/map/static/map.css
@@ -44,6 +44,13 @@ body {
     padding-right: 16px;
 }
 
+.map-public {
+    position: relative;
+    margin-left: 0;
+    max-width: 800px;
+    width: 80vw;
+}
+
 .map-wrapper {
     background: white;
     border-radius: 8px;
