--- a/openday_scavenger/views/admin/templates/visitors_status.html
+++ b/openday_scavenger/views/admin/templates/visitors_status.html
@@ -1,3 +1,4 @@
+<div class="me-3 p-3">
 {% if visitor %}
     {% if success %}
     <div class="m-2 p-3 admin-bg-green">
@@ -12,5 +13,6 @@
         <button type="button" class="btn btn-danger" hx-post="/admin/visitors/{{ visitor.uid }}/checkout" hx-include="#still_playing" hx-swap="innerHTML" hx-target="#visitor-table"><i class="fa-solid fa-check"></i> Checkout Visitor (ends their adventure)</button>
     </div>
 {% else %}
-    Unknown Adventure Key (Visitor UID)
+    Please scan an Adventure Key or type the visitor UID into the search field.
 {% endif %}
+</div>
